# codexbar-tui

./: CLAUDE.md  Cargo.toml  README.md
docs/: omarchy-integration.md
docs/cli-reference/: README.md  commands.md  config-dump-pretty.json  config-dump.json  config-dump.txt  cost-claude.json  cost-codex.json  help-config.txt  help-cost.txt  help-usage.txt  ldd.txt  linux-caveats.md  pkgbuild-deps.md  runtime-deps.md  rust-data-model.sketch.md  schema.md  timings.md  tui-needs.md  usage-all.json  usage-claude-cli.json  usage-claude-oauth.json  usage-claude-status.json  usage-claude.json  usage-codex-cli.json
scripts/: codexbar-tui-remove-omarchy  codexbar-tui-setup-omarchy
src/: cache.rs  config.rs  main.rs  merge.rs  parse.rs  poll.rs  providers.rs  spawn.rs  state.rs  ui.rs
tests/: omarchy-hotkey.sh
