[package]
name = "codexbar-tui"
version = "0.1.0"
edition = "2024"
description = "Thin terminal UI on top of the codexbar CLI (steipete/CodexBar), Omarchy-themed."
license = "MIT"
repository = "https://github.com/Zeus-Deus/codexbar-tui"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
toml = "0.8"
thiserror = "2"
directories = "5"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
